# mot-viewer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
mot_viewer/: __init__.py  config.py
mot_viewer/datasets/: __init__.py  models.py  registry.py
mot_viewer/routes/: __init__.py  api.py  pages.py
mot_viewer/services/: __init__.py  viewer.py
static/: app.js  style.css
templates/: index.html
